----------
v2.0.6-git
----------



------
v2.0.5
------

[mjr] Fix bug that was causing tag stats to be incorrectly incremented (Bug
      #14112).
[mjr] Add Content_Objects_Manager::delete().
[jan] Add unit tests for Oracle.


------
v2.0.4
------

[jan] Fix date format for 'created' column.


------
v2.0.3
------

[mjr] Fix obtaining tag cloud information when filtering by objectIds.


------
v2.0.2
------

[mjr] Fix logic that could possibly lead to incorrect content types being
      applied to objects (Bug #12016).


------
v2.0.1
------

[jan] Add missing optional dependency on Horde_ElasticSearch.
[jan] Catch exceptions from Horde_ElasticSearch.


------
v2.0.0
------

[jan] Support Horde 5.


------
v1.0.3
------

[mjr] Honor the limit and radius parameters.
[mjr] Fix getObjects method when passing object_id (Bug# 10439).
[mjr] Fix including all non-aggregate fields in GROUP BY clause (Bug# 10419).
[jan] Fix commandline scripts (Bug #10656).


------
v1.0.2
------

[mjr] Fix broken tag cloud queries due to missing GROUP BY fields (Bug #10419)
[mjr] Prevent tagging with empty strings.


------
v1.0.1
------

[mjr] Enforce that object and type names are always taken as a string (Bug
      #10171).
[mjr] Updated unit tests to new test structure.
[mjr] Prevent tagging with empty tags.


------
v1.0.0
------

[jan] Fix case-insensitive filtering of duplicate tags (Bug #9617).
[jan] Rename all scripts to be prefixed with content- (Request #9647).