@@ -2,6 +2,7 @@
 v2.0.6-git
 ----------
 
+[jan] Officially support PHP 7.
 
 
 ------
